--- a/azure-pipelines/templates/terraform-deploy-steps.yml
+++ b/azure-pipelines/templates/terraform-deploy-steps.yml
@@ -1,6 +1,8 @@
 parameters:
   - name: serviceConnection
     type: string
+  - name: databricksHost
+    type: string
   - name: environment
     type: string
   - name: adGroupEnvironment
@@ -31,9 +33,7 @@ parameters:
   - name: storageConnectorId
     type: string
     default: ''
-  - name: databricksHost
-    type: string
-    default: ''
+
   
 
 
@@ -48,7 +48,7 @@ steps:
   # Install Terraform manually since TerraformInstaller task is not available
   - script: |
       # Download and install Terraform
-      TERRAFORM_VERSION=${TERRAFORM_VERSION:-1.5.7}
+      TERRAFORM_VERSION=${TERRAFORM_VERSION:-1.13.1}
       echo "Installing Terraform version: $TERRAFORM_VERSION"
       
       # Download Terraform
@@ -67,6 +67,30 @@ steps:
       TERRAFORM_VERSION: $(terraformVersion)
 
   - task: AzureCLI@2
+    displayName: 'Get Login'
+    inputs:
+      azureSubscription: ${{ parameters.serviceConnection }}
+      addSpnToEnvironment: true
+      scriptType: 'bash'
+      scriptLocation: 'inlineScript'
+      inlineScript: |
+        echo "##vso[task.setvariable variable=servicePrincipalId]$servicePrincipalId"
+        echo "##vso[task.setvariable variable=idToken]$idToken"
+        echo "##vso[task.setvariable variable=tenantId]$tenantId"
+
+  - task: Bash@3
+    displayName: "Login Again"
+    inputs:
+      targetType: inline
+      script: >-
+        az login
+        --service-principal
+        --username='$(servicePrincipalId)'
+        --tenant='$(tenantId)'
+        --federated-token='$(idToken)'
+        --allow-no-subscriptions
+
+  - task: AzureCLI@2
     displayName: 'Terraform Init'
     inputs:
       azureSubscription: ${{ parameters.serviceConnection }}
@@ -74,59 +98,15 @@ steps:
       scriptLocation: 'inlineScript'
       inlineScript: |
         echo "=== Setting up Terraform with Managed Identity Service Connection ==="
-        
-        # Get current Azure context details
-        CURRENT_SUBSCRIPTION=$(az account show --query id -o tsv)
-        CURRENT_TENANT=$(az account show --query tenantId -o tsv)
-        
-        echo "Current Subscription: $CURRENT_SUBSCRIPTION"
-        echo "Current Tenant: $CURRENT_TENANT"
-        
-        # Since we can't use the managed identity directly with Terraform,
-        # we'll get a SAS token for the storage account
-        echo "=== Getting Storage Account SAS Token ==="
-        
-        # Get storage account key (if you have access) or use SAS token
-        END_DATE=$(date -u -d "1 hour" '+%Y-%m-%dT%H:%MZ')
-        
-        # Generate a SAS token for the container
-        SAS_TOKEN=$(az storage container generate-sas \
-          --account-name $(terraform_storage_account) \
-          --name $(terraform_container) \
-          --permissions dlrw \
-          --expiry $END_DATE \
-          --auth-mode login \
-          --as-user \
-          --output tsv)
-        
-        if [ -z "$SAS_TOKEN" ]; then
-          echo "ERROR: Failed to generate SAS token"
-          exit 1
-        fi
-        
-        echo "Successfully generated SAS token for backend storage"
-        
-        # Set Databricks environment variable
-        export DATABRICKS_HOST=${{ parameters.databricksHost }}
-        
-        # Log configuration
-        echo "=== Configuration ==="
-        echo "Environment: ${{ parameters.environment }}"
-        echo "Backend Storage: $(terraform_storage_account)"
-        echo "Backend Container: $(terraform_container)"
-        echo "Backend RG: $(terraform_resource_group)"
-        echo "Databricks Host: ${DATABRICKS_HOST}"
-        
-        # Initialize Terraform with Azure backend using SAS token
-        echo "=== Running Terraform Init with SAS Token ==="
         cd $(System.DefaultWorkingDirectory)
         
         terraform init \
           -backend-config="resource_group_name=$(terraform_resource_group)" \
           -backend-config="storage_account_name=$(terraform_storage_account)" \
           -backend-config="container_name=$(terraform_container)" \
-          -backend-config="key=orca-ddl/${{ parameters.environment }}/terraform.tfstate" \
-          -backend-config="sas_token=$SAS_TOKEN"
+          -backend-config="key=orca-ddl/${{ parameters.environment }}/terraform.tfstate" 
+    env:
+      ARM_USE_AZREAD: true
 
   - task: AzureCLI@2
     displayName: 'Terraform Validate'
