--- a/azure-pipelines/ddl-deploy.yml
+++ b/azure-pipelines/ddl-deploy.yml
@@ -45,6 +45,7 @@ stages:
             parameters:
               serviceConnection: 'cbs-data-preprod-mi-reporting-dev'
               environment: dev
+              databricksAccountId: $(databricks_account_id)
               adGroupEnvironment: $(ad_environment_name)
               orcaCatalog: $(catalog_orca)
               orcaMetadataSchema: $(schema_orca_metadata)
@@ -76,6 +77,7 @@ stages:
             parameters:
               serviceConnection: 'cbs-data-preprod-mi-reporting-dev'
               environment: test
+              databricksAccountId: $(databricks_account_id)
               adGroupEnvironment: $(ad_environment_name)
               orcaCatalog: $(catalog_orca)
               orcaMetadataSchema: $(schema_orca_metadata)
@@ -113,6 +115,7 @@ stages:
                   parameters:
                     serviceConnection: 'cbs-data-preprod-mi-reporting-dev'
                     environment: uat
+                    databricksAccountId: $(databricks_account_id)
                     adGroupEnvironment: $(ad_environment_name)
                     orcaCatalog: $(catalog_orca)
                     orcaMetadataSchema: $(schema_orca_metadata)
@@ -149,6 +152,7 @@ stages:
                   parameters:
                     serviceConnection: 'cbs-data-preprod-mi-reporting-dev'
                     environment: prod
+                    databricksAccountId: $(databricks_account_id)
                     adGroupEnvironment: $(ad_environment_name)
                     orcaCatalog: $(catalog_orca)
                     orcaMetadataSchema: $(schema_orca_metadata)
